Set jump targets in CodeSelector